--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Vitória Morais</title>
 </head>
 <body>
-    <div>
+    <div class="card">
         <div>
-            <img src="foto.png" alt="Vitória Morais">
+            <img class="image" src="foto.png" alt="Vitória Morais">
         </div>
         <div>
             <h1>Vitória Morais Rodrigues Moreira</h1>
         </div>
-        <div>
+        <div class="buttons">
             <div>
                 <form method="get" action="https://www.linkedin.com/in/vitoriamoraisrm"><button>Linkedin</button></form>
             </div>
@@ -23,12 +24,12 @@
             </div>
         </div>
     </div>
+    <div class="icons">
+        <img src="https://pluspng.com/img-png/java-png-java-icon-1600.png" alt="java">
+        <img src="https://aux.iconspalace.com/uploads/10403104782126634882.png" alt="html">
+        <img src="https://th.bing.com/th/id/R.6a3b3e71c06fb4e5638e4bfad89995cc?rik=KX%2fnW7yendSsxw&riu=http%3a%2f%2fcdn.onlinewebfonts.com%2fsvg%2fimg_193675.png&ehk=d2iFBf8imvMB8U%2fYpOXuufHejPYTY54UUqMjRo7Rto8%3d&risl=&pid=ImgRaw&r=0" alt="css">
+        <img src="" alt="sql">
+        <img src="" alt="robot">
+    </div>
 </body>
-<footer>
-    <img src="https://pluspng.com/img-png/java-png-java-icon-1600.png" alt="java">
-    <img src="https://aux.iconspalace.com/uploads/10403104782126634882.png" alt="html">
-    <img src="https://th.bing.com/th/id/R.6a3b3e71c06fb4e5638e4bfad89995cc?rik=KX%2fnW7yendSsxw&riu=http%3a%2f%2fcdn.onlinewebfonts.com%2fsvg%2fimg_193675.png&ehk=d2iFBf8imvMB8U%2fYpOXuufHejPYTY54UUqMjRo7Rto8%3d&risl=&pid=ImgRaw&r=0" alt="css">
-    <img src="" alt="sql">
-    <img src="" alt="robot">
-</footer>
 </html>
