--- a/index.html
+++ b/index.html
@@ -8,42 +8,46 @@
         <title>Vitória Morais</title>
     </head>
     <body>
-        <div class="card" id="content">
+        <div id="card" class="content">
             <div>
                 <img class="image" src="foto.png" alt="Vitória Morais">
             </div>
+            <div class="texts">
+                <h1 style="font-size:x-large">Vitória Morais Rodrigues Moreira</h1>
+                <p class="infor">Quality Analyst - QA</p>
+                <p class="infor">Análise e Desenvolvimento de Sistemas</p>
+            </div>
+        </div>
+        <div id="networks">
             <div>
-                <h1>Vitória Morais Rodrigues Moreira</h1>
-                <li>Quality Analyst - QA</li>
-                <li>Análise e Desenvolvimento de Sistemas</li>
+                <form method="get" target="_blank"
+                    action="https://www.linkedin.com/in/vitoriamoraisrm"><button
+                        class="button">Linkedin</button></form>
             </div>
-            <div class="buttons">
-                <div>
-                    <form method="get" target="_blank"
-                        action="https://www.linkedin.com/in/vitoriamoraisrm"><button>Linkedin</button></form>
-                </div>
-                <div>
-                    <form method="get" target="_blank"
-                        action="https://github.com/VitoriaMoraisRM/"><button>Github</button></form>
-                </div>
+            <div>
+                <form method="get" target="_blank"
+                    action="https://github.com/VitoriaMoraisRM/"><button
+                        class="button">Github</button></form>
             </div>
         </div>
-        <div class="icons-languages" id="content">
-            <img id="icons"
-                src="https://pluspng.com/img-png/java-png-java-icon-1600.png"
-                alt="java">
-            <img id="icons"
-                src="https://aux.iconspalace.com/uploads/10403104782126634882.png"
-                alt="html">
-            <img id="icons"
-                src="https://th.bing.com/th/id/R.6a3b3e71c06fb4e5638e4bfad89995cc?rik=KX%2fnW7yendSsxw&riu=http%3a%2f%2fcdn.onlinewebfonts.com%2fsvg%2fimg_193675.png&ehk=d2iFBf8imvMB8U%2fYpOXuufHejPYTY54UUqMjRo7Rto8%3d&risl=&pid=ImgRaw&r=0"
-                alt="css">
-            <img id="icons"
-                src="https://3.bp.blogspot.com/-V0cVuTQlhTs/WPERBswDm_I/AAAAAAAAEJ0/5UNO_dfZLNw25BQ-gL08zRgWTjoAg5U2ACLcB/s1600/sql-512.png"
-                alt="sql">
-            <img id="icons"
-                src="https://th.bing.com/th/id/R.73ae4120727cd13ad069fa13874b65d1?rik=KRN39%2bboJfAWwg&pid=ImgRaw&r=0"
-                alt="robot">
-        </div>
+        <footer>
+            <div id="icons-languages" class="content">
+                <img class="icons"
+                    src="https://pluspng.com/img-png/java-png-java-icon-1600.png"
+                    alt="java">
+                <img class="icons"
+                    src="https://aux.iconspalace.com/uploads/10403104782126634882.png"
+                    alt="html">
+                <img class="icons"
+                    src="https://th.bing.com/th/id/R.6a3b3e71c06fb4e5638e4bfad89995cc?rik=KX%2fnW7yendSsxw&riu=http%3a%2f%2fcdn.onlinewebfonts.com%2fsvg%2fimg_193675.png&ehk=d2iFBf8imvMB8U%2fYpOXuufHejPYTY54UUqMjRo7Rto8%3d&risl=&pid=ImgRaw&r=0"
+                    alt="css">
+                <img class="icons"
+                    src="https://3.bp.blogspot.com/-V0cVuTQlhTs/WPERBswDm_I/AAAAAAAAEJ0/5UNO_dfZLNw25BQ-gL08zRgWTjoAg5U2ACLcB/s1600/sql-512.png"
+                    alt="sql">
+                <img class="icons"
+                    src="https://th.bing.com/th/id/R.73ae4120727cd13ad069fa13874b65d1?rik=KRN39%2bboJfAWwg&pid=ImgRaw&r=0"
+                    alt="robot">
+            </div>
+        </footer>
     </body>
 </html>
