Finalização dos botões e do footer

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <body>
         <div id="card" class="content">
             <div>
-                <img class="image" src="foto.png" alt="Vitória Morais">
+                <img class="image" src="image.jpeg" alt="Vitória Morais">
             </div>
             <div class="texts">
-                <h1 style="font-size:x-large">Vitória Morais Rodrigues Moreira</h1>
+                <h1 style="font-size:x-large; padding: 15px;">Vitória Morais Rodrigues Moreira</h1>
                 <p class="infor">Quality Analyst - QA</p>
                 <p class="infor">Análise e Desenvolvimento de Sistemas</p>
             </div>
