Tornando os textos resposivos

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
         <title>Vitória Morais</title>
     </head>
     <body>
-        <div id="card" class="content">
+        <div id="card">
             <div>
                 <img class="image" src="image.jpeg" alt="Vitória Morais">
             </div>
-            <div class="texts">
-                <h1 style="font-size:x-large; padding: 15px;">Vitória Morais Rodrigues Moreira</h1>
+            <div id="texts">
+                <h1 id="name">Vitória Morais Rodrigues Moreira</h1>
                 <p class="infor">Quality Analyst - QA</p>
                 <p class="infor">Análise e Desenvolvimento de Sistemas</p>
             </div>
@@ -31,7 +31,7 @@
             </div>
         </div>
         <footer>
-            <div id="icons-languages" class="content">
+            <div id="icons-languages">
                 <img class="icons"
                     src="https://pluspng.com/img-png/java-png-java-icon-1600.png"
                     alt="java">
